--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages, my dude.</p>
+		<h1>Discord Thingy</h1>
+		<iframe src="https://discordapp.com/widget?id=273651884592594944&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 	</body>
 </html>
