--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Discord Thingy</h1>
-		<iframe src="https://discordapp.com/widget?id=273651884592594944&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		<h1 align = "center">Discord Thingy</h1>
+		<div align = "center">
+			<iframe src="https://discordapp.com/widget?id=273651884592594944&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		</div>
 	</body>
 </html>
