--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<body style = "background-color:powderblue">
-		<h1 align = "center">Discord Thingy</h1>
-		<div align = "center">
-			<iframe src="https://discordapp.com/widget?id=273651884592594944&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-		</div>
-	</body>
+<head>
+<title>My Website :)</title>
+<style>
+body { background-color: #131313; }
+</style>
+</head>
+<body background="ogdog.gif">
+</body>
 </html>
